[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-forge"
version = "0.1.0"
description = "A toolkit for generating beautiful, Ray Dalio–style baseball cards for people profiles with AI-generated content"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jochen van Wylick", email = "jochen@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "Pillow>=10.0.0",
    "markdown>=3.4.0",
    "weasyprint>=59.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
gpu = [
    # For CUDA 11.8 support - install with: uv add --extra gpu card-forge
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jochenvw/card-forge"
Repository = "https://github.com/jochenvw/card-forge.git"
Issues = "https://github.com/jochenvw/card-forge/issues"

[project.scripts]
card-forge = "generate_card:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]